# oeio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  vrzn.toml
.github/workflows/: build-wheels.yml
benchmarks/: CMakeLists.txt
benchmarks/cpp/: bench_pipeline.cpp  bench_read.cpp  bench_registry.cpp  generate_bench_data.cpp
benchmarks/python/: bench_batch_read.py  bench_read.py  bench_roundtrip.py
examples/: 01-Introduction.ipynb
examples/assets/: drugs.mae  drugs.sdf  drugs.smi
include/oeio/: exceptions.h  format_handler.h  format_registry.h  mol_range.h  oechem_config.h  oeio.h  pipeline.h  read.h  version.h  write.h
python/: pyproject.toml
python/oeio/: __init__.py
scripts/: build_python.py
src/: format_registry.cpp  mol_range.cpp  oechem_handler.cpp  pipeline.cpp  read.cpp  write.cpp
swig/: CMakeLists.txt  oeio.i
tests/cpp/: CMakeLists.txt  test_exceptions.cpp  test_extension_matching.cpp  test_mol_range.cpp  test_oechem_handler.cpp  test_pipeline.cpp  test_registry.cpp
tests/python/: conftest.py  test_oeio.py  test_package_imports.py  test_plugin_discovery.py
